Removing pink hover / click indicator on mobile menu, fixes #65

--- a/web/wp-content/themes/cncf-theme/source/scss/components/_nav.scss
+++ b/web/wp-content/themes/cncf-theme/source/scss/components/_nav.scss
@@ -118,10 +118,10 @@
             }
 
             // change arrow colour
-            &:hover::after {
-                border-bottom: 1px solid $link-hover;
-                border-right: 1px solid $link-hover;
-            }
+            // &:hover::after {
+            //     border-bottom: 1px solid $link-hover;
+            //     border-right: 1px solid $link-hover;
+            // }
 
             // rotate when sub menu is open
             &.is-open::after {
